[tool.poetry]
name = "gold"
version = "0.1.0"
description = ""
authors = ["rysky-boi <dave@rysk.finance>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.22.0"
pandas = "^2.2.2"
pandas-stubs = "^2.2.2.240603"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
